# vulkan-forward-plus

./: .gitattributes  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
assets/: dummy.ktx
assets/config_files/: _vimrc  deferred_scene_config.xml
assets/config_files/deferred_scene/: deferred_scene.ini
assets/config_files/deferred_scene/models/: nanosuit.ini
assets/models/Crate/: Crate1.mtl  crate_1.dds
assets/models/crytek-sponza/: sponza.dae
assets/models/crytek-sponza/sponza/: background.dds  background_ddn.dds  background_spec.dds  chain_texture.dds  chain_texture_ddn.dds  dummy.dds  dummy_ddn.dds  dummy_specular.dds  lion.dds  lion_ddn.dds  lion_spec.dds  spnza_bricks_a_ddn.dds  spnza_bricks_a_diff.dds  spnza_bricks_a_spec.dds  sponza_arch_ddn.dds  sponza_arch_diff.dds  sponza_arch_spec.dds  sponza_ceiling_a_ddn.dds  sponza_ceiling_a_diff.dds  sponza_ceiling_a_spec.dds  sponza_column_a_ddn.dds  sponza_column_a_diff.dds  sponza_column_a_spec.dds  sponza_column_b_ddn.dds  sponza_column_b_diff.dds  sponza_column_b_spec.dds  sponza_column_c_ddn.dds  sponza_column_c_diff.dds  sponza_column_c_spec.dds  sponza_curtain_blue_diff.dds  sponza_curtain_ddn.dds  sponza_curtain_diff.dds  sponza_curtain_green_diff.dds  sponza_curtain_spec.dds  sponza_details_ddn.dds  sponza_details_diff.dds  sponza_details_spec.dds  sponza_fabric_blue_diff.dds  sponza_fabric_ddn.dds  sponza_fabric_diff.dds  (+22 more)
assets/models/cube/: cube.mtl  lunarg_logo.dds
assets/models/rubik/: RubixCube.mtl
assets/models/spot/: README.txt
assets/shaders/: blur.frag  fpshade.frag  fpshade.vert  g_shade.frag  g_store.frag  g_store.vert  light_culling.comp  passthrough.vert  ssao_gen.frag  tonemapping.frag  tonemapping_visbuff.frag  vis_shade.frag.spvasm  vis_shade_amd.frag  vis_store.frag  vis_store.frag.spvasm  vis_store.vert  vis_store.vert.spv.txt  vis_store_amd.frag  vis_store_amd.vert
base/include/: base_system.h  camera.h  camera_controller.h  crc.h  eastl_streams.h  framebuffer.h  frustum.h  input_manager.h  light.h  lights_manager.h  log.h  logger.hpp  material.h  material_constants.h  material_instance.h  material_manager.h  material_parameters.h  material_texture_type.h  mesh.h  meshes_heap.h  meshes_heap_manager.h  model.h  model_manager.h  renderpass.h  scene.h  shutdown_dtor.h  subpass.h  uncopyable.h  vertex_setup.h  viewport.h  vulkan_base.h  vulkan_buffer.h  vulkan_device.h  vulkan_image.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_texture_manager.h  vulkan_tools.h  vulkan_uniform_buffer.h
base/source/: base_system.cpp  camera.cpp  camera_controller.cpp  crc.cpp  eastl_opnew.cpp  eastl_strings.cpp  framebuffer.cpp  frustum.cpp  input_manager.cpp  lights_manager.cpp  material.cpp  material_constants.cpp  material_instance.cpp  material_manager.cpp  material_parameters.cpp  mesh.cpp  meshes_heap_manager.cpp  model.cpp  model_manager.cpp  renderpass.cpp  scene.cpp  shutdown_dtor.cpp  subpass.cpp  vertex_setup.cpp  vulkan_base.cpp  vulkan_buffer.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_texture_manager.cpp  vulkan_tools.cpp  vulkan_uniform_data.cpp
cmake/Scripts/: compile_shaders.txt
fplus/: fplus_renderer.cpp  fplus_renderer.h  fplus_scene.cpp  fplus_scene.h  main.cpp
